# lab-38-spell-checker

./: CMakeLists.txt  README.md  main.cpp
src/: dictionary_file.cpp  dictionary_file.h  spell_checker.cpp  spell_checker.h
test/: spell_checker_test.cpp
